finished implementation of 01 - Drum Kit

--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -59,6 +59,25 @@
 
 <script>
 
+  function playSound (e) {
+    const keyName = e.keyCode;
+    var audio = document.querySelector(`audio[data-key="${keyName}"]`);
+    var key = document.querySelector(`.key[data-key="${keyName}"]`);
+    if (!audio) return;
+    audio.currentTime = 0;
+    audio.play();
+    key.classList.add('playing');
+  };
+
+  function removeTransition (e) {
+    if (e.propertyName !== 'transform') return;
+    this.classList.remove('playing');
+  };
+
+  const keys = document.querySelectorAll('.key');
+  keys.forEach(key => key.addEventListener('transitionend', removeTransition));
+  window.addEventListener('keydown', playSound);
+
 </script>
 
 
