--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -62,12 +62,38 @@
       background: black;
       position: absolute;
       top: 50%;
+      transform-origin: 100%;
+      transform: rotate(90deg);
+      transition: all 0.05s;
+      transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
     }
 
   </style>
 
   <script>
+  let hourHand = document.querySelector('.hour-hand');
+  let minHand = document.querySelector('.min-hand');
+  let secHand = document.querySelector('.second-hand');
+ 
+  function setDate() {
+    const now = new Date();
 
+    const sec = now.getSeconds();
+    const secDegrees = (sec / 60) * 360 + 90;
+    secHand.style.transform = `rotate(${secDegrees}deg)`
+
+    const min = now.getMinutes();
+    const minDegrees = (min / 60) * 360 + 90;
+    minHand.style.transform = `rotate(${minDegrees}deg)`
+
+    let hour = now.getHours();
+    const hourDegrees = ((hour / 12) * 360) + ((min / 60) * 30) + 90;
+    hourHand.style.transform = `rotate(${hourDegrees}deg)`
+  }
+
+  setInterval(setDate, 1000);
+  
+  setDate();
 
   </script>
 </body>
