--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -31,28 +31,54 @@
 
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    const fifteen = inventors.filter(inventor => (inventor.year >= 1500 && inventor.year < 1600));
 
+    console.log(fifteen);
     // Array.prototype.map()
     // 2. Give us an array of the inventors' first and last names
-
+    const names = inventors.map(inventor => (`${inventor.first} ${inventor.last}`));
+    console.log(names);
+   
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    const ordered = inventors.sort((a, b) => a.year > b.year ? 1 : -1);
+    console.table(ordered);
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live?
-
+    const years = inventors.reduce((total, curr) => { return total + (curr.passed - curr.year)} , 0)
+    console.log(years);
     // 5. Sort the inventors by years lived
+    const yearsLived = inventors.sort((a, b) => (a.year - a.passed) > (b.year - b.passed) ? -1 : 1);
+    console.table(yearsLived);
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
-
-
+    // const category = document.querySelector('.mw-category');
+    // const links = Array.from(category.querySelectorAll('a'));
+    // const de = links
+    //              .map(link => link.textContent)
+    //              .filter(word => word.includes('de'));
+    // console.log(de)
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    const alpha = people.sort((a,b) => {
 
+      return a.split(', ')[0] > b.split(', ')[0] ? 1 : -1;
+    });
+    console.log(alpha);
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+    const sum = data.reduce((total, curr) => {
+      if (total[curr]) {
+        total[curr]++;
+      }  else {
+        total[curr] = 1
+      }
+      return total;
+    }, {})
+    console.log(sum)
 
   </script>
 </body>
