--- a/13 - Slide in on Scroll/index-START.html
+++ b/13 - Slide in on Scroll/index-START.html
@@ -43,7 +43,7 @@
   </div>
 
   <script>
-    function debounce(func, wait = 20, immediate = true) {
+    function debounce(func, wait = 5, immediate = true) {
       var timeout;
       return function() {
         var context = this, args = arguments;
@@ -58,6 +58,24 @@
       };
     }
 
+    const sliderImages = document.querySelectorAll('.slide-in');
+
+    function slideIn(e) {
+      sliderImages.forEach(image => {
+        const slideInAt = (window.scrollY + window.innerHeight) - 
+        image.height / 2;
+        const bottomOfImage = image.offsetTop + image.height;
+        const isHalfShown = slideInAt > image.offsetTop;
+        const isNotScrolledPast = window.scrollY + 100 < bottomOfImage;
+        if(isHalfShown && isNotScrolledPast) {
+          image.classList.add('active');
+        } else {
+          image.classList.remove('active');
+        }
+      });
+    }
+
+    window.addEventListener('scroll', debounce(slideIn));
   </script>
 
   <style>
@@ -105,11 +123,11 @@
     }
 
     .align-left.slide-in {
-      transform: translateX(-30%) scale(0.95);
+      transform: translateX(-30%) scale(.7);
     }
     
     .align-right.slide-in {
-      transform: translateX(30%) scale(0.95);
+      transform: translateX(30%) scale(0.7);
     }
 
     .slide-in.active {
