--- a/22 - Follow Along Link Highlighter/index-START.html
+++ b/22 - Follow Along Link Highlighter/index-START.html
@@ -27,6 +27,32 @@
 
   <script>
     // 👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀
+    const highlight = document.createElement('span');
+    highlight.classList.add('highlight');
+
+    document.body.append(highlight);
+
+    function highlightText(e) {
+      const linkCoords = this.getBoundingClientRect();
+      
+      const coords = {
+        width: linkCoords.width,
+        height: linkCoords.height,
+        top: window.scrollY + linkCoords.y,
+        left: window.scrollX + linkCoords.x
+      }
+      
+      console.log(coords);
+
+      highlight.style.width = `${coords.width}px`;
+      highlight.style.height = `${coords.height}px`;
+      highlight.style.transform = `translate(${coords.left}px, ${coords.top}px)`;
+    } 
+
+    const links = document.querySelectorAll('a');
+    links.forEach(a => {
+      a.addEventListener('mouseenter', highlightText);
+    });
   </script>
 </body>
 </html>
