--- a/24 - Sticky Nav/index-START.html
+++ b/24 - Sticky Nav/index-START.html
@@ -54,7 +54,20 @@
   </div>
 
 <script>
+  const nav = document.querySelector('nav');
+  const topOfNav = nav.offsetTop;
 
+  function fixNav() {
+    if (window.scrollY > topOfNav) {
+      document.body.style.paddingTop = nav.offsetHeight + 'px';
+      document.body.classList.add('fixed-nav');
+    } else {
+      nav.style.paddingTop = 0;
+      document.body.classList.remove('fixed-nav');  
+    }
+  }
+
+  window.addEventListener('scroll', fixNav);
 </script>
 
 </body>
