--- a/25 - Event Capture, Propagation, Bubbling and Once/index-START.html
+++ b/25 - Event Capture, Propagation, Bubbling and Once/index-START.html
@@ -42,6 +42,18 @@
 
 <button></button>
 <script>
+  const divs = document.querySelectorAll('div');
+
+  function log(e) {
+    console.log(this.classList.value);
+    // e.stopPropagation();  
+  }
+
+  divs.forEach(div => div.addEventListener('click', log, {
+    capture: true
+  }));
+
+
 
 </script>
 </body>
